Fix poll leading bar contrast

--- a/app/styles/polls.scss
+++ b/app/styles/polls.scss
@@ -15,7 +15,7 @@
     display: inline-block;
     border-radius: 4px;
     background: hsla(var(--primary-text-color_hsl), 0.3);
-    &.leading { background: hsla(var(--primary-text-color_hsl), 0.6); }
+    &.leading { background: hsla(var(--primary-text-color_hsl), 0.1); }
   }
 
   &__text {
